--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "myapp",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "This is my first web app",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "author": "Hasti Gheibi Dehnashi",
+  "license": "MIT",
+  "engines": {
+    "node": "v14.15.4"
   },
   "dependencies": {
     "bootstrap-icons": "^1.4.0",
