--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is my first web app",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "author": "Hasti Gheibi Dehnashi",
   "license": "MIT",
