Added a main field in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is my first web app",
   "private": true,
   "scripts": {
+    "main": "app.js",
     "start": "node app.js"
   },
   "author": "Hasti Gheibi Dehnashi",
